buildscript {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
}

allprojects {
    apply plugin: 'idea'

    version = '1.0'
    ext {
        appName = 'vector-pinball'
    }

    repositories {
        mavenCentral()
        maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
    }
}

project(':core') {
    apply plugin: 'java-library'

    dependencies {
        api "com.badlogicgames.gdx:gdx:$gdxVersion"
        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
    }
}

project(':desktop') {
    apply plugin: 'java'
    apply plugin: 'application'

    application {
        mainClass = 'com.dozingcatsoftware.bouncy.desktop.DesktopLauncher'
    }

    dependencies {
        implementation project(':core')
        implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
        implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
        implementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
    }
}

subprojects {
    plugins.withType(JavaPlugin).configureEach {
        java {
            sourceCompatibility = JavaVersion.VERSION_17
            targetCompatibility = JavaVersion.VERSION_17
        }
    }
}
